# TTS-Bot

./: .env.example  .gitignore  LICENSE.md  README.md  pyproject.toml  start.py
modules/: ttsmodule.py
